--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "denis909\\ArrayObject\\" : ""
+            "Denis909\\ArrayObject\\" : ""
         }
     }
 }
